2008-04-24  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/guile-support.h: 
	* gnome/gobject/guile-support.c (scm_symbol_chars)
	(scm_symbol_chars_dynwind, scm_keyword_chars)
	(scm_keyword_chars_dynwind): New functions.

	* gnome/gobject/gvalue.c (scm_c_gvalue_ref, scm_c_gvalue_set)
	(scm_c_scm_to_enum_value, scm_c_scm_to_flags_value)
	(unwrap_gvalue_array, genum-register-static)
	(genum-class->value-table, gflags-register-static)
	(gflags-class->value-table):
	* gnome/gobject/gsignal.c (gsignal-query, gsignal-create)
	(gtype-instance-signal-emit)
	(gtype-instance-signal-connect-closure): 
	* gnome/gobject/gparameter.c (SCM_ERROR_NOT_YET_IMPLEMENTED):
	Fix deprecation warnings.

	* gnome/gobject/gobject.c (gobject-get-data, gobject-set-data!):
	Remove unused functions.
	(scm_c_gobject_construct)
	(scm_with_c_gtype_instance_instance_init, gobject-get-property)
	(gobject-set-property)
	(SCM_DEFINE): Fix deprecation warnings. Untabify the file.

2008-04-10  Andy Wingo  <wingo@unquote>

	* == Released guile-gnome-platform version 2.15.97 ==

2008-04-10  Andy Wingo  <wingo@unquote>

	* VERSION: Bumped to 2.15.97.

2008-04-10  Andy Wingo  <wingo@unquote>

	* NEWS: Update NEWS.

2008-04-10  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gvalue.c:
	* gnome/gobject/gtype.c:
	* gnome/gobject/gsignal.c (scm_c_gsignal_query):
	* gnome/gobject/gparameter.c:
	* gnome/gobject/gobject.c: Disable debugging printouts.

	* gnome/gobject/gtype.c (scm_c_gtype_class_to_gtype)
	(scm_c_scm_to_gtype_instance): Avoid scm_slot_ref on 'u' slots on
	broken versions of Guile.

	* gnome/gobject/gparameter.scm (compute-get-n-set): Use our new
	%hacky-* struct accessors. (The accessors are not exported.)

	* gnome/gobject/gparameter.c (scm_sys_hacky_struct_ref)
	(scm_sys_hacky_struct_set_x): New functions, equivalent to
	struct-ref and struct-set! from guile, except that they don't
	check permissions or allocation, because we know them, and, more